Fix Flash assert.

Reland of https://codereview.chromium.org/2109873002/.

BUG=625201

Review-Url: https://codereview.chromium.org/2116723002
Cr-Commit-Position: refs/heads/master@{#403476}

Former-commit-id: 4d66c388052c2c22791e859e6918e779fa5e4732